2014-12-03  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/63558
	* decl.c (identify_goto): Return a bool if diagnostic is emitted.
	(check_previous_goto_1): Consistently emit permerror + inform.
	(check_goto): Likewise.

2014-12-03  Richard Biener  <rguenther@suse.de>

	* constexpr.c (cxx_eval_builtin_function_call): Use
	fold_build_call_array_loc.

2014-12-02  Marek Polacek  <polacek@redhat.com>

	* constexpr.c (cxx_eval_check_shift_p): New function.
	(cxx_eval_binary_expression): Call it.  Set NON_CONSTANT_P if it
	returns true.

2014-12-01  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60859
	* decl.c (reshape_init_r): Do not reject value-initialization of
	scalar array element.

2014-12-01  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/63956
	* constexpr.c: Include ubsan.h.
	(cxx_eval_call_expression): Bail out for IFN_UBSAN_{NULL,BOUNDS}
	internal functions and for ubsan builtins.
	* error.c: Include internal-fn.h.
	(dump_expr): Add printing of internal functions.

2014-12-01  Marek Polacek  <polacek@redhat.com>

	* constexpr.c (literal_type_p): Return true for void type in C++14.

2014-12-01  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60845
	* typeck.c (finish_class_member_access_expr): Use %q#T instead of
	%qD in error message.

2014-11-29  Jakub Jelinek  <jakub@redhat.com>

	* cp-gimplify.c (cxx_omp_clause_apply_fn): Remove NULL last argument
	from create_tmp_var calls.

2014-11-28  Marek Polacek  <polacek@redhat.com>

	PR c/63862
	* typeck.c (cp_build_binary_op) <RSHIFT_EXPR, LSHIFT_EXPR>: Don't
	convert the right operand to integer type.

2014-11-27  Kai Tietz  <ktietz@redhat.com>

	PR c++/63904
	* constexpr.c (cxx_eval_vec_init_1): Avoid
	type-overflow issue.

2014-11-26  Jason Merrill  <jason@redhat.com>

	Allow partial specialization of variable templates.
	* cp-tree.h (TINFO_USED_TEMPLATE_ID): New.
	* decl.c (duplicate_decls): Copy it.
	* error.c (dump_decl) [TEMPLATE_ID_EXPR]: Handle variables.