@@ -1,3 +1,9 @@
+2014-12-03  Jason Merrill  <jason@redhat.com>
+
+	PR c++/64080
+	* constexpr.c (cxx_eval_store_expression): Handle non-decl store
+	targets.
+
 2014-12-03  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/63558
